--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/FrizQuadrataC.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Home Page</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757762155374"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757762155374">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1757762412228"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757762412228">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -83,7 +83,7 @@
 						</div>
 						<div class="home__item">
 							<div class="firtsPhoto">
-								<img src="./assets/img/_Dentaire_Avenir_Cli.jpg" width="100%" alt="Image">
+								<img src="./assets/img/team.jpg" width="100%" alt="Image">
 							</div>
 							<div class="firtsText">
 								<h2>Наша главная задача — добиться вашего полного выздоровления.</h2>
