--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/FrizQuadrataC.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Home Page</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757762412228"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757762412228">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1757763228975"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757763228975">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -73,10 +73,10 @@
 						<div class="home__item name">
 							<div class="name__title">
 								<h1>DENTAIRE</h1>
-								<h1>
-									AVENIR
+								<div class="name__diamond">
+									<h1>AVENIR</h1>
 									<img src="./assets/img/diamond.svg" width="5" height="5" alt="Логотип DENTAIRE AVENIR CLINIQUE">
-								</h1>
+								</div>
 								<h1>CLINIQUE</h1>
 							</div>
 							<h2>Авторский стоматологический центр</h2>
