--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/FrizQuadrataC.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Home Page</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757768874375"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757768874375">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1757769580591"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757769580591">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -34,6 +34,9 @@
 									</li>
 									<li class="menu__item">
 										<a href="#" class="menu__link">Команда</a>
+									</li>
+									<li class="menu__item">
+										<a href="#" class="menu__link">Отзывы</a>
 									</li>
 								</ul>
 								<ul class="menu__contacts">
@@ -80,6 +83,19 @@
 								<h1>CLINIQUE</h1>
 							</div>
 							<h2>Авторский стоматологический центр</h2>
+						</div>
+						<div class="home__item">
+							<div class="firtsPhoto">
+								<img src="./assets/img/team.jpg" width="100%" alt="Image">
+							</div>
+							<div class="firtsText">
+								<h2>Наша главная задача — добиться вашего полного выздоровления.</h2>
+								<p>
+									Мы не ведем
+						пациентов годами, мы
+						находим и устраняем причину заболевания, используя индивидуальный подход к каждому.
+								</p>
+							</div>
 						</div>
 						<div class="home__item">
 							<div class="firtsPhoto">
