--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/FrizQuadrataC.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Home Page</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757769580591"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757769580591">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1757802468864"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757802468864">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -84,11 +84,11 @@
 							</div>
 							<h2>Авторский стоматологический центр</h2>
 						</div>
-						<div class="home__item">
-							<div class="firtsPhoto">
+						<div class="home__item firts">
+							<div class="firts__Photo">
 								<img src="./assets/img/team.jpg" width="100%" alt="Image">
 							</div>
-							<div class="firtsText">
+							<div class="firts__Text">
 								<h2>Наша главная задача — добиться вашего полного выздоровления.</h2>
 								<p>
 									Мы не ведем
@@ -97,17 +97,74 @@
 								</p>
 							</div>
 						</div>
-						<div class="home__item">
-							<div class="firtsPhoto">
-								<img src="./assets/img/team.jpg" width="100%" alt="Image">
+						<div class="home__item about">
+							<div class="about__title">
+								<h1>Философия нашей работы</h1>
 							</div>
-							<div class="firtsText">
-								<h2>Наша главная задача — добиться вашего полного выздоровления.</h2>
+							<div class="about__text">
 								<p>
-									Мы не ведем
-						пациентов годами, мы
-						находим и устраняем причину заболевания, используя индивидуальный подход к каждому.
+									Мы стремимся предоставить каждому пациенту индивидуальный подход и высококачественное
+						обслуживание, чтобы вы могли наслаждаться здоровой и красивой улыбкой.
 								</p>
+								<p>
+									Предлагаем широкий спектр услуг, включая хирургическую и эстетическую стоматологию, а также
+						ортодонтию. Мы специализируемся на установке виниров — тонких и прочных накладок, которые
+						преображают внешний вид зубов, а также на лечении заболеваний дёсен, избавляя пациентов от
+						дискомфорта и зуда во время приёма пищи. Для профилактики кариеса мы предлагаем герметизацию
+						фиссур — процедуру, при которой запечатываются бороздки на жевательной поверхности зубов,
+						предотвращая накопление остатков пищи.
+								</p>
+							</div>
+						</div>
+						<div class="home__item team">
+							<div class="team__title">
+								<h1>Слаженная команда</h1>
+								<p>
+									Каждый доктор нашего дружного коллектива — настоящий специалист, который проведет консультацию,
+						диагностику и лечение в соответствии с лучшими европейскими стандартами
+								</p>
+							</div>
+							<div class="team__items">
+								<div class="team__item">
+									<div class="team__foto"></div>
+									<div class="team__name">
+										<h4>Стаж: 19 лет</h4>
+										<h3>Русинов Денис Андреевич</h3>
+										<p>Стоматолог-ортопед, врач-рентгенолог</p>
+									</div>
+								</div>
+								<div class="team__item">
+									<div class="team__foto"></div>
+									<div class="team__name">
+										<h4>Стаж: 19 лет</h4>
+										<h3>Русинов Денис Андреевич</h3>
+										<p>Стоматолог-ортопед, врач-рентгенолог</p>
+									</div>
+								</div>
+								<div class="team__item">
+									<div class="team__foto"></div>
+									<div class="team__name">
+										<h4>Стаж: 19 лет</h4>
+										<h3>Русинов Денис Андреевич</h3>
+										<p>Стоматолог-ортопед, врач-рентгенолог</p>
+									</div>
+								</div>
+								<div class="team__item">
+									<div class="team__foto"></div>
+									<div class="team__name">
+										<h4>Стаж: 19 лет</h4>
+										<h3>Русинов Денис Андреевич</h3>
+										<p>Стоматолог-ортопед, врач-рентгенолог</p>
+									</div>
+								</div>
+								<div class="team__item">
+									<div class="team__foto"></div>
+									<div class="team__name">
+										<h4>Стаж: 19 лет</h4>
+										<h3>Русинов Денис Андреевич</h3>
+										<p>Стоматолог-ортопед, врач-рентгенолог</p>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
