--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/FrizQuadrataC.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Home Page</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757802468864"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757802468864">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1757833261953"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757833261953">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -130,39 +130,43 @@
 									<div class="team__name">
 										<h4>Стаж: 19 лет</h4>
 										<h3>Русинов Денис Андреевич</h3>
-										<p>Стоматолог-ортопед, врач-рентгенолог</p>
+										<p>
+											Стоматолог-ортопед,
+											<br>
+											врач-рентгенолог
+										</p>
 									</div>
 								</div>
 								<div class="team__item">
 									<div class="team__foto"></div>
 									<div class="team__name">
 										<h4>Стаж: 19 лет</h4>
-										<h3>Русинов Денис Андреевич</h3>
-										<p>Стоматолог-ортопед, врач-рентгенолог</p>
+										<h3>Конькова Александра Михайловна</h3>
+										<p>Стоматолог-ортодонт</p>
 									</div>
 								</div>
 								<div class="team__item">
 									<div class="team__foto"></div>
 									<div class="team__name">
 										<h4>Стаж: 19 лет</h4>
-										<h3>Русинов Денис Андреевич</h3>
-										<p>Стоматолог-ортопед, врач-рентгенолог</p>
+										<h3>Луганский Андрей Алексеевич</h3>
+										<p>Стоматолог-хирург, имплантолог</p>
+									</div>
+								</div>
+								<div class="team__item">
+									<div class="team__foto"></div>
+									<div class="team__name">
+										<h4>Стаж: 6 лет</h4>
+										<h3>Григорян Ануш Эдвардовна</h3>
+										<p>Стоматолог-терапевт</p>
 									</div>
 								</div>
 								<div class="team__item">
 									<div class="team__foto"></div>
 									<div class="team__name">
 										<h4>Стаж: 19 лет</h4>
-										<h3>Русинов Денис Андреевич</h3>
-										<p>Стоматолог-ортопед, врач-рентгенолог</p>
-									</div>
-								</div>
-								<div class="team__item">
-									<div class="team__foto"></div>
-									<div class="team__name">
-										<h4>Стаж: 19 лет</h4>
-										<h3>Русинов Денис Андреевич</h3>
-										<p>Стоматолог-ортопед, врач-рентгенолог</p>
+										<h3>Наам Константин Владимирович</h3>
+										<p>Стоматолог-пародонтолог</p>
 									</div>
 								</div>
 							</div>
