--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/FrizQuadrataC.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Home Page</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757833261953"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757833261953">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1757845690874"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757845690874">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -89,11 +89,11 @@
 								<img src="./assets/img/team.jpg" width="100%" alt="Image">
 							</div>
 							<div class="firts__Text">
-								<h2>Наша главная задача — добиться вашего полного выздоровления.</h2>
+								<h2>Наша главная задача&nbsp;&mdash; добиться вашего полного выздоровления.</h2>
 								<p>
-									Мы не ведем
+									Мы&nbsp;не&nbsp;ведем
 						пациентов годами, мы
-						находим и устраняем причину заболевания, используя индивидуальный подход к каждому.
+						находим и&nbsp;устраняем причину заболевания, используя индивидуальный подход к&nbsp;каждому.
 								</p>
 							</div>
 						</div>
@@ -103,15 +103,20 @@
 							</div>
 							<div class="about__text">
 								<p>
-									Мы стремимся предоставить каждому пациенту индивидуальный подход и высококачественное
-						обслуживание, чтобы вы могли наслаждаться здоровой и красивой улыбкой.
+									Мы&nbsp;стремимся предоставить каждому пациенту индивидуальный подход и&nbsp;высококачественное
+						обслуживание, чтобы вы&nbsp;могли наслаждаться здоровой и&nbsp;красивой улыбкой.
 								</p>
 								<p>
-									Предлагаем широкий спектр услуг, включая хирургическую и эстетическую стоматологию, а также
-						ортодонтию. Мы специализируемся на установке виниров — тонких и прочных накладок, которые
-						преображают внешний вид зубов, а также на лечении заболеваний дёсен, избавляя пациентов от
-						дискомфорта и зуда во время приёма пищи. Для профилактики кариеса мы предлагаем герметизацию
-						фиссур — процедуру, при которой запечатываются бороздки на жевательной поверхности зубов,
+									Предлагаем широкий спектр услуг, включая хирургическую и&nbsp;эстетическую стоматологию,
+						а&nbsp;также
+						ортодонтию. Мы&nbsp;специализируемся на&nbsp;установке виниров&nbsp;&mdash; тонких
+						и&nbsp;прочных накладок, которые
+						преображают внешний вид зубов, а&nbsp;также на&nbsp;лечении заболеваний дёсен, избавляя
+						пациентов от
+						дискомфорта и&nbsp;зуда во&nbsp;время приёма пищи. Для профилактики кариеса мы&nbsp;предлагаем
+						герметизацию
+						фиссур&nbsp;&mdash; процедуру, при которой запечатываются бороздки на&nbsp;жевательной
+						поверхности зубов,
 						предотвращая накопление остатков пищи.
 								</p>
 							</div>
@@ -120,8 +125,9 @@
 							<div class="team__title">
 								<h1>Слаженная команда</h1>
 								<p>
-									Каждый доктор нашего дружного коллектива — настоящий специалист, который проведет консультацию,
-						диагностику и лечение в соответствии с лучшими европейскими стандартами
+									Каждый доктор нашего дружного коллектива&nbsp;&mdash; настоящий специалист, который проведет
+						консультацию,
+						диагностику и&nbsp;лечение в&nbsp;соответствии с&nbsp;лучшими европейскими стандартами
 								</p>
 							</div>
 							<div class="team__items">
@@ -167,6 +173,74 @@
 										<h4>Стаж: 19 лет</h4>
 										<h3>Наам Константин Владимирович</h3>
 										<p>Стоматолог-пародонтолог</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="home__item services">
+							<div class="services__title">
+								<h1>Наши услуги</h1>
+							</div>
+							<div class="services__items">
+								<div class="services__item">
+									<div class="services__subtitle">
+										<h3>Консультация и диагностика</h3>
+									</div>
+									<div class="services__text">
+										<p>Консультация проводится высококфалицированными специалистами</p>
+										<p>
+											Диагностика - важный и неотъемлемый процесс в нашем подходе. Выполняется с использованием
+								новейшего оборудования
+										</p>
+										<p>Выявляем все патологии и формируем лучший план лечения</p>
+									</div>
+								</div>
+								<div class="services__item">
+									<div class="services__subtitle">
+										<h3>Профилактическая стоматология</h3>
+									</div>
+									<div class="services__text">
+										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
+									</div>
+								</div>
+								<div class="services__item">
+									<div class="services__subtitle">
+										<h3>Терапевтическое лечение зубов</h3>
+									</div>
+									<div class="services__text">
+										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
+									</div>
+								</div>
+								<div class="services__item">
+									<div class="services__subtitle">
+										<h3>Хирургия и имплантация</h3>
+									</div>
+									<div class="services__text">
+										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
+									</div>
+								</div>
+								<div class="services__item">
+									<div class="services__subtitle">
+										<h3>Протезирование зубов</h3>
+									</div>
+									<div class="services__text">
+										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
+									</div>
+								</div>
+								<div class="services__item">
+									<div class="services__subtitle">
+										<h3>Пародонтология</h3>
+									</div>
+									<div class="services__text">
+										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
+									</div>
+								</div>
+								<div class="services__item">
+									<div class="services__subtitle">
+										<h3>Ортодонтическое лечение</h3>
+									</div>
+									<div class="services__text">
+										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
 									</div>
 								</div>
 							</div>
