--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/FrizQuadrataC.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Home Page</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1757845690874"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757845690874">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1757853718085"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1757853718085">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -73,7 +73,7 @@
 			<main class="page page--home home">
 				<div class="home__container">
 					<div class="home__items">
-						<div class="home__item name">
+						<section class="home__item name">
 							<div class="name__title">
 								<h1>DENTAIRE</h1>
 								<div class="name__diamond">
@@ -83,12 +83,12 @@
 								<h1>CLINIQUE</h1>
 							</div>
 							<h2>Авторский стоматологический центр</h2>
-						</div>
-						<div class="home__item firts">
-							<div class="firts__Photo">
-								<img src="./assets/img/team.jpg" width="100%" alt="Image">
+						</section>
+						<section class="home__item first">
+							<div class="first__Photo">
+								<img src="./assets/img/team.jpg" width="100%" alt="Команда стоматологической клиники DENTAIRE AVENIR CLINIQUE">
 							</div>
-							<div class="firts__Text">
+							<div class="first__Text">
 								<h2>Наша главная задача&nbsp;&mdash; добиться вашего полного выздоровления.</h2>
 								<p>
 									Мы&nbsp;не&nbsp;ведем
@@ -96,8 +96,8 @@
 						находим и&nbsp;устраняем причину заболевания, используя индивидуальный подход к&nbsp;каждому.
 								</p>
 							</div>
-						</div>
-						<div class="home__item about">
+						</section>
+						<section class="home__item about">
 							<div class="about__title">
 								<h1>Философия нашей работы</h1>
 							</div>
@@ -120,8 +120,8 @@
 						предотвращая накопление остатков пищи.
 								</p>
 							</div>
-						</div>
-						<div class="home__item team">
+						</section>
+						<section class="home__item team">
 							<div class="team__title">
 								<h1>Слаженная команда</h1>
 								<p>
@@ -131,7 +131,7 @@
 								</p>
 							</div>
 							<div class="team__items">
-								<div class="team__item">
+								<article class="team__item">
 									<div class="team__foto"></div>
 									<div class="team__name">
 										<h4>Стаж: 19 лет</h4>
@@ -142,47 +142,47 @@
 											врач-рентгенолог
 										</p>
 									</div>
-								</div>
-								<div class="team__item">
+								</article>
+								<article class="team__item">
 									<div class="team__foto"></div>
 									<div class="team__name">
 										<h4>Стаж: 19 лет</h4>
 										<h3>Конькова Александра Михайловна</h3>
 										<p>Стоматолог-ортодонт</p>
 									</div>
-								</div>
-								<div class="team__item">
+								</article>
+								<article class="team__item">
 									<div class="team__foto"></div>
 									<div class="team__name">
 										<h4>Стаж: 19 лет</h4>
 										<h3>Луганский Андрей Алексеевич</h3>
 										<p>Стоматолог-хирург, имплантолог</p>
 									</div>
-								</div>
-								<div class="team__item">
+								</article>
+								<article class="team__item">
 									<div class="team__foto"></div>
 									<div class="team__name">
 										<h4>Стаж: 6 лет</h4>
 										<h3>Григорян Ануш Эдвардовна</h3>
 										<p>Стоматолог-терапевт</p>
 									</div>
-								</div>
-								<div class="team__item">
+								</article>
+								<article class="team__item">
 									<div class="team__foto"></div>
 									<div class="team__name">
 										<h4>Стаж: 19 лет</h4>
 										<h3>Наам Константин Владимирович</h3>
 										<p>Стоматолог-пародонтолог</p>
 									</div>
-								</div>
+								</article>
 							</div>
-						</div>
-						<div class="home__item services">
+						</section>
+						<section class="home__item services">
 							<div class="services__title">
 								<h1>Наши услуги</h1>
 							</div>
 							<div class="services__items">
-								<div class="services__item">
+								<article class="services__item">
 									<div class="services__subtitle">
 										<h3>Консультация и диагностика</h3>
 									</div>
@@ -194,62 +194,74 @@
 										</p>
 										<p>Выявляем все патологии и формируем лучший план лечения</p>
 									</div>
-								</div>
-								<div class="services__item">
+								</article>
+								<article class="services__item">
 									<div class="services__subtitle">
 										<h3>Профилактическая стоматология</h3>
 									</div>
 									<div class="services__text">
-										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
+										<p>
+											Наша цель не зарабатывать на гигиенах, а вовлечь и обучить вас эффективному уходу за
+								полостью рта в домашних условиях
+										</p>
 									</div>
-								</div>
-								<div class="services__item">
+								</article>
+								<article class="services__item">
 									<div class="services__subtitle">
 										<h3>Терапевтическое лечение зубов</h3>
 									</div>
 									<div class="services__text">
-										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
+										<p>
+											Лечим под увеличением, минимально обрабатываем зубы, выявляем все скрытые кариесы,
+								восстанавливаем анатомию и эстетику зубов
+										</p>
 									</div>
-								</div>
-								<div class="services__item">
+								</article>
+								<article class="services__item">
 									<div class="services__subtitle">
 										<h3>Хирургия и имплантация</h3>
 									</div>
 									<div class="services__text">
-										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
+										<p>Мы можем воссоздать любой утраченный зуб при помощи современной имплантации</p>
 									</div>
-								</div>
-								<div class="services__item">
+								</article>
+								<article class="services__item">
 									<div class="services__subtitle">
 										<h3>Протезирование зубов</h3>
 									</div>
 									<div class="services__text">
-										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
+										<p>
+											Работаем от конечного результата для пациента. Тщательно диагностируем, планируем,
+								учитываем все особенности, чтобы улыбка была естественной и уверенной
+										</p>
 									</div>
-								</div>
-								<div class="services__item">
+								</article>
+								<article class="services__item">
 									<div class="services__subtitle">
 										<h3>Пародонтология</h3>
 									</div>
 									<div class="services__text">
-										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
+										<p>
+											Опыт и понимание причин возникновения воспаления дёсен и подвижности зубов позволяет нам
+								эффективно проводить лечение
+										</p>
 									</div>
-								</div>
-								<div class="services__item">
+								</article>
+								<article class="services__item">
 									<div class="services__subtitle">
 										<h3>Ортодонтическое лечение</h3>
 									</div>
 									<div class="services__text">
-										<p>Основа нашего лечения. Выявляем все патологии и формируем лучший план лечения</p>
+										<p>Ортодонтия позволяет исправить положение зубов в любом возрасте</p>
 									</div>
-								</div>
+								</article>
 							</div>
-						</div>
+						</section>
 					</div>
 				</div>
 			</main>
 			<footer data-fls-footer="" class="footer">
-				<div class="footer__container"></div>
+				<div class="footer__container">футтер</div>
 			</footer>
 		</div>
 	</body>
