--- a/price.html
+++ b/price.html
@@ -6,10 +6,10 @@
 		<link rel="preload" href="./assets/fonts/FrizQuadrataC.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Цены</title>
-		<script type="module" crossorigin="" src="./js/price.min.js?v=1757885020831"></script>
+		<script type="module" crossorigin="" src="./js/price.min.js?v=1758053953983"></script>
 		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757885020831">
-		<link rel="stylesheet" crossorigin="" href="./css/price.min.css?v=1757885020831">
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1758053953983">
+		<link rel="stylesheet" crossorigin="" href="./css/price.min.css?v=1758053953983">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -1237,61 +1237,48 @@
 				<div class="footer__container">
 					<div class="footer__header">
 						<h2>КОНТАКТЫ</h2>
-						<p>[связаться с нами]</p>
 					</div>
 					<div class="footer__content">
 						<div class="footer__column">
-							<h3>[информация]</h3>
-							<a>ООО «Картье»</a>
-							<a href="#license">Лицензия ЛО-77-01-021707</a>
-							<a href="#policy">Политика конфиденциальности</a>
-							<a href="/licence">Информация для пациентов</a>
-							<a href="/site-map">Карта сайта</a>
-							<a href="https://dentaireavenirclinique.ru/price">Цены</a>
-						</div>
-						<div class="footer__column">
-							<h3>[меню]</h3>
-							<a href="/">Главная</a>
-							<a href="/#about-clinic">О клинике</a>
-							<a href="/#dentists">Команда</a>
-							<a href="/#services">Услуги</a>
-							<a href="/#philosophy">Пациентам</a>
-							<a href="#contacts">Контакты</a>
-						</div>
-						<div class="footer__column">
-							<h3>[услуги]</h3>
-							<a href="/consultation-and-diagnostics">Консультация и диагностика</a>
-							<a href="/preventive-dentistry">Профилактическая стоматология</a>
-							<a href="/therapeutic-dental-treatment">Терапевтическое лечение зубов</a>
-							<a href="/implantation">Хирургия и имплантация</a>
-							<a href="/prosthetics">Протезирование зубов</a>
-							<a href="/periodontology">Пародонтология</a>
-							<a href="/orthodontic-treatment">Ортодонтическое лечение</a>
-						</div>
-						<div class="footer__column">
-							<div class="map__container">
-								<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa0491f259f63c7f144b42d22e73ce00da2737eaccad71cde1fa762076b4e2bdb&amp;source=constructor" width="100%" height="100%" frameborder="0"></iframe>
-							</div>
 							<div class="contact-info">
-								<p>Время работы: Ежедневно с 9:00-21:00</p>
-								<p>
-									Адрес клиники:
-									<br>
-									Ленинградский просп., 35, стр. 2, Москва
-								</p>
+								<h3>Время работы:</h3>
+								<p>Ежедневно с 9:00-21:00</p>
+								<h3>Адрес клиники:</h3>
+								<p>Ленинградский просп., 35, стр. 2, Москва</p>
 								<a href="tel:+79675551480">+7 (967) 555-14-80</a>
 							</div>
 							<div class="social-links">
-								<a href="mailto:avenir.dentaire@yandex.ru" target="_blank">✉</a>
-								<a href="https://t.me/Dentaire_Avenir_Clnique" target="_blank">📱</a>
-								<a href="https://api.whatsapp.com/send/?phone=79675551480" target="_blank">💬</a>
-								<a href="https://vk.com/public212677485" target="_blank">VK</a>
+								<a href="mailto:avenir.dentaire@yandex.ru" target="_blank">
+									<img src="./assets/img/email.svg" alt="Image">
+								</a>
+								<a href="https://t.me/Dentaire_Avenir_Clnique" target="_blank">
+									<img src="./assets/img/tg.svg" alt="Image">
+									<a href="https://api.whatsapp.com/send/?phone=79675551480" target="_blank">
+										<img src="./assets/img/wa.svg" alt="Image">
+										<a href="https://vk.com/public212677485" target="_blank">
+											<img src="./assets/img/vk.svg" alt="Image">
+										</a>
+									</a>
+								</a>
+							</div>
+						</div>
+						<div class="footer__column">
+							<div class="footer__map">
+								<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa0491f259f63c7f144b42d22e73ce00da2737eaccad71cde1fa762076b4e2bdb&lang=ru_RU&source=constructor" width="100%" height="100%" frameborder="0"></iframe>
 							</div>
 						</div>
 					</div>
 					<div class="footer__bottom">
-						<p>© 2025 "DENTAIRE AVENIR CLINIQUE". Все права защищены.</p>
-						<p>Имеются противопоказания. Проконсультируйтесь со специалистом</p>
+						<div class="footer__link">
+							<a href="#license">Лицензия ЛО-77-01-021707</a>
+							<a href="#policy">Политика конфиденциальности</a>
+							<a href="/legal">Информация для пациентов</a>
+						</div>
+						<p>© 2025 "DENTAIRE AVENIR CLINIQUE". ООО «Картье». Все права защищены.</p>
+					</div>
+					<div data-fls-marquee="" data-fls-marquee-speed="500">
+						<span>Имеются противопоказания. Проконсультируйтесь со специалистом</span>
+						<span>•</span>
 					</div>
 				</div>
 			</footer>
