--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<link rel="preload" href="./assets/fonts/FrizQuadrataC.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1758054414115"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1758054414115">
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1758054414115">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1758054730327"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1758054730327">
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1758054730327">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -22,22 +22,22 @@
 							<div class="menu__container">
 								<!-- Добавленная обертка -->
 								<div class="menu__logo">
-									<a href="index.html">
+									<a href="index">
 										<img src="./assets/img/logo.svg" width="25" height="25" alt="Логотип DENTAIRE AVENIR CLINIQUE">
 									</a>
 								</div>
 								<ul class="menu__list">
 									<li class="menu__item">
-										<a href="#" class="menu__link">О клинике</a>
+										<a href="index" class="menu__link">О клинике</a>
 									</li>
 									<li class="menu__item">
-										<a href="#" class="menu__link">Услуги</a>
+										<a href="index" class="menu__link">Услуги</a>
 									</li>
 									<li class="menu__item">
-										<a href="#" class="menu__link">Команда</a>
+										<a href="index" class="menu__link">Команда</a>
 									</li>
 									<li class="menu__item">
-										<a href="#" class="menu__link">Отзывы</a>
+										<a href="index" class="menu__link">Отзывы</a>
 									</li>
 									<li class="menu__item">
 										<a href="price" class="menu__link">Цены</a>
